[package]
name = "fastcrypto-derive"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.107", features = ["derive"] }
proc-macro2 = "1.0.47"
quote = "1.0.23"
convert_case = "0.6.0"
