[package]
name = "fastcrypto-vdf"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastcrypto = { path = "../fastcrypto" }
num-bigint = "0.4.4"
num-traits = "0.2.17"
num-integer = "0.1.45"
num-modular = "0.6.1"
num-prime = { version = "0.4.3", features = ["big-int"] }

[features]
experimental = []

[dev-dependencies]
hex = "0.4.3"
criterion = "0.5.1"
rand = "0.8.4"

[[bench]]
name = "vdf"
harness = false
required-features = ["experimental"]

[[bench]]
name = "class_group"
harness = false
required-features = ["experimental"]
